--- a/SOPCOVIDChecker/Views/Resu/SendToLabModal.cshtml
+++ b/SOPCOVIDChecker/Views/Resu/SendToLabModal.cshtml
@@ -17,7 +17,7 @@
                 <div class="col-md-12">
                     <div class="form-group">
                         <label>Laboratory;</label><br />
-                        <select class="select2" asp-for="LabAccId" asp-items="ViewBag.Labs">
+                        <select class="form-control" asp-for="LabAccId" asp-items="ViewBag.Labs">
                             <option value="" selected="selected" hidden="hidden">Select Laboratory</option>
                         </select>
                     </div>
