--- a/SOPCOVIDChecker/Views/Shared/Navbar/_navbarPartialView.cshtml
+++ b/SOPCOVIDChecker/Views/Shared/Navbar/_navbarPartialView.cshtml
@@ -8,34 +8,11 @@
                 &nbsp;Home
             </a>
         </li>
-        <!-- MANAGE -->
-        <li class="nav-item dropdown">
-            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-user-injured"></i>
-                &nbsp;Patient
+        <li class="nav-item ">
+            <a class="nav-link" asp-area="" asp-controller="Sop" asp-action="SampleStatus">
+                <i class="far fa-file-alt"></i>
+                &nbsp;Results
             </a>
-
-            <ul class="dropdown-menu border-0 shadow">
-                <li>
-
-                    <a class="dropdown-item" asp-controller="Admission" asp-action="Index">
-                        <i class="fas fa-procedures"></i>
-                        &nbsp;Admit
-                    </a>
-                </li>
-                <li>
-                    <a class="dropdown-item" asp-controller="Discharge" asp-action="Index">
-                        <i class="fas fa-ambulance"></i>
-                        &nbsp;Discharge
-                    </a>
-                </li>
-                <li>
-                    <a class="dropdown-item" asp-controller="Patients" asp-action="Excel">
-                        <i class="fas fa-upload"></i>
-                        &nbsp;Upload
-                    </a>
-                </li>
-            </ul>
         </li>
     }
 
@@ -125,35 +102,41 @@
                 &nbsp;Home
             </a>
         </li>
-        <!-- MANAGE -->
-        <li class="nav-item dropdown">
-            <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                <i class="fa fa-user-injured"></i>
-                &nbsp;Patient
+        <li class="nav-item ">
+            <a class="nav-link" asp-area="" asp-controller="Result" asp-action="LabUsers">
+                <i class="fa fa-user-md"></i>
+                &nbsp;Staff
             </a>
-
-            <ul class="dropdown-menu border-0 shadow">
-                <li>
-
-                    <a class="dropdown-item" asp-controller="Admission" asp-action="Index">
-                        <i class="fas fa-procedures"></i>
-                        &nbsp;Admit
-                    </a>
-                </li>
-                <li>
-                    <a class="dropdown-item" asp-controller="Discharge" asp-action="Index">
-                        <i class="fas fa-ambulance"></i>
-                        &nbsp;Discharge
-                    </a>
-                </li>
-                <li>
-                    <a class="dropdown-item" asp-controller="Patients" asp-action="Excel">
-                        <i class="fas fa-upload"></i>
-                        &nbsp;Upload
-                    </a>
-                </li>
-            </ul>
         </li>
+        <!-- MANAGE -->
+        @*<li class="nav-item dropdown">
+                <a href="#" class="dropdown-toggle nav-link" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
+                    <i class="fa fa-user-injured"></i>
+                    &nbsp;Patient
+                </a>
+
+                <ul class="dropdown-menu border-0 shadow">
+                    <li>
+
+                        <a class="dropdown-item" asp-controller="Admission" asp-action="Index">
+                            <i class="fas fa-procedures"></i>
+                            &nbsp;Admit
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" asp-controller="Discharge" asp-action="Index">
+                            <i class="fas fa-ambulance"></i>
+                            &nbsp;Discharge
+                        </a>
+                    </li>
+                    <li>
+                        <a class="dropdown-item" asp-controller="Patients" asp-action="Excel">
+                            <i class="fas fa-upload"></i>
+                            &nbsp;Upload
+                        </a>
+                    </li>
+                </ul>
+            </li>*@
     }
 
 
@@ -201,10 +184,10 @@
             </ul>
         </li>
     }
-        <li class="nav-item fa-pull-right">
-            <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Logout">
-                <i class="fa fa-sign-out-alt"></i>
-                &nbsp;Logout
-            </a>
-        </li>
-    </ul>
+    <li class="nav-item fa-pull-right">
+        <a class="nav-link" asp-area="" asp-controller="Account" asp-action="Logout">
+            <i class="fa fa-sign-out-alt"></i>
+            &nbsp;Logout
+        </a>
+    </li>
+</ul>
