--- a/SOPCOVIDChecker/Views/_ViewImports.cshtml
+++ b/SOPCOVIDChecker/Views/_ViewImports.cshtml
@@ -3,6 +3,7 @@
 @using SOPCOVIDChecker.Models.ResuViewModel
 @using SOPCOVIDChecker.Models.AccountViewModels
 @using SOPCOVIDChecker.Models.SopViewModel
+@using SOPCOVIDChecker.Models.ResultViewModel  
 @using SOPCOVIDChecker.Models.AdminViewModel
 @using System.Security.Claims
 @using System.Globalization
