from other repo

--- a/SOPCOVIDChecker/Views/Account/Login.cshtml
+++ b/SOPCOVIDChecker/Views/Account/Login.cshtml
@@ -11,7 +11,7 @@
         <div class="login-box">
             <center>
                 <img src="~/assets/dist/img/DOHLOGO.png" style="width: 25%" /><br>
-                <label>SOP Covid Checker</label>
+                <label>Covid Checker</label>
             </center>
             <!-- /.login-logo -->
             <div class="card" style="font-size: 14px;">
